--- a/surpresa.html
+++ b/surpresa.html
@@ -40,7 +40,7 @@
         <section id="texto">
             <h2>Para você, com carinho</h2>
             <p>
-                Cada um desses momentos na nossa galeria representa um passo na jornada que estamos construindo. Este cronômetro não marca apenas o tempo, mas a intensidade de cada segundo que passamos juntos. Que venham muitos outros dias, horas e sorrisos para somar.
+                Cada um desses momentos na nossa galeria representa um passo na jornada que estamos construindo. Este cronômetro não marca apenas o tempo, mas a intensidade de cada segundo que passamos juntos. Que venham muitos outros dias, horas e sorrisos para somar. Te amo Lolis, vc é a minha maior certeza, amo estar contigo...vc é a minha 01.
             </p>
         </section>
     </div>
